--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.2.0",
+    "@angular/cdk": "^13.0.2",
     "@angular/common": "~12.2.0",
     "@angular/compiler": "~12.2.0",
     "@angular/core": "~12.2.0",
     "@angular/forms": "~12.2.0",
+    "@angular/material": "^13.0.2",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
-    "bootstrap": "^4.6.1",
+    "bootstrap": "^4.6.0",
     "jquery": "^3.6.0",
     "material-design-icons": "^3.0.1",
     "popper.js": "^1.16.1",
